src/objects/ShipmentPackage__c.object
<CustomObject>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeftAtLocation__c</fullName>
        <label>Left at Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <description>This field will contain the list of SKU numbers in the package in JASON format.</description>
        <label>ProductCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedDateOfArrivalExt__c</fullName>
        <formula>Shipment__r.RequestedDateOfArrival__c+5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date Of Arrival Extention</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledDeliveryDate__c</fullName>
        <label>Scheduled Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>ShipmentPackages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SignedForName__c</fullName>
        <label>Signed For Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Unknown&quot;</defaultValue>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>TrackingNumber</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Shipment Package</label>
    <nameField>
        <label>ShipmentPackage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>